운영 UI 정리 및 Copilot 리뷰 반영